# cinema

./: .gitignore  CMakeLists.txt  README.md  films.txt  log.txt  main.c  users.txt
.github/workflows/: cmake.yml
favorites/: Admin.txt  Karat.txt  Nikita.txt
tests/: test.py
